# koi-net-node-template

./: README.md  pyproject.toml  requirements.txt
node/: config.py  core.py
src/koi_net_CHANGE_NAME_node/: config.py  core.py  handlers.py
